@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.6:
 *03/10/31:
+  * Fix textbutton text alignment (out by one) (Simon)
+    TextButton.cc
   * Tweak some positioning for winbutton drawn icons (Simon)
     WinButton.cc
   * Fix iconbar button alignment and squash inactive tools (Simon)
